<resources>
    <string name="app_name">KidTasker</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name*</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="sign_up">SIGN UP</string>
    <string name="children">Children</string>
    <string name="parent">Parent</string>
    <string name="top_bg_desc">Top background(arch)</string>
    <string name="woman_desc">A woman in the right corner of the upper arch</string>
    <string name="create_account">Create\naccount</string>
    <string name="login_to_your_account">Login to\nyour account</string>
    <string name="login">LOGIN</string>
    <string name="forget_password">Forget password?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_market">Market</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_history">History</string>
</resources>