<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_market"
            android:icon="@drawable/ic_menu_market"
            android:title="@string/menu_market" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>