<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.x1oto.kidtasker.presentation.view.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.x1oto.kidtasker.presentation.view.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_market"
        android:name="com.x1oto.kidtasker.presentation.view.MarketFragment"
        android:label="@string/menu_market"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.x1oto.kidtasker.presentation.view.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>