<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBEB">

    <!-- Top Background Image -->
    <ImageView
        android:id="@+id/topBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/top_bg_desc"
        android:src="@drawable/top_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Woman Background Image -->
    <ImageView
        android:id="@+id/womanBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/woman_desc"
        android:src="@drawable/women1"
        app:layout_constraintBottom_toBottomOf="@id/topBackground"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Fragment Name TextView -->
    <TextView
        android:id="@+id/fragmentNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/login_to_your_account"
        android:textColor="#FFF"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/topBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topBackground" />

    <!-- Email TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBackground">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/emailTil"
        app:layout_constraintStart_toStartOf="@+id/emailTil"
        app:layout_constraintTop_toBottomOf="@+id/emailTil"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Forget Password TextView -->
    <TextView
        android:id="@+id/forgetPasswordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/forget_password"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordTil"
        app:layout_constraintTop_toBottomOf="@+id/passwordTil" />

    <!-- Signup Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupBt"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/circle_login_button"
        android:drawableEnd="@drawable/circle"
        android:paddingStart="64dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordTil"
        app:layout_constraintStart_toStartOf="@+id/passwordTil" />

</androidx.constraintlayout.widget.ConstraintLayout>
